added swagger for member handler
